updated  quick import

--- a/production/src/file-history/file-history.scss
+++ b/production/src/file-history/file-history.scss
@@ -79,7 +79,7 @@ $primary-blue: #1c91dc;
 
 .ant-dropdown {
   .ant-dropdown-menu-item {
-    width: 156px;
+    min-width: 156px;
     padding: 4px 22px;
     line-height: 20px;
 
