US263774;-Session-prolonging implemented and postMessage used considering  security concerns

--- a/production/src/home/home.css
+++ b/production/src/home/home.css
@@ -13,10 +13,6 @@ hr {
   flex-direction: column;
 }
 
-#overlay {
-  animation: fadein 1.5s;
-}
-
 #app-header {
   display: flex;
   justify-content: space-between;
@@ -29,6 +25,7 @@ hr {
 }
 
 #overlay {
+  min-height: 100%;
   animation: fadein 1.5s;
 }
 
