few small fixes

--- a/production/src/index.css
+++ b/production/src/index.css
@@ -167,7 +167,7 @@ button.floating-button[disabled]:hover {
 
 #root {
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .popup-footer {
