--- a/production/src/dossier/dossier.css
+++ b/production/src/dossier/dossier.css
@@ -20,3 +20,11 @@
 .dossier-title-margin-top {
   margin-top: 10px;
 }
+
+#popup-wrapper .empty  {
+  position: fixed; 
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+}
