--- a/production/src/dossier/dossier.css
+++ b/production/src/dossier/dossier.css
@@ -23,8 +23,8 @@
 
 #popup-wrapper .empty  {
   position: fixed; 
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
 }
