DE167419; UI is partly blocked when search returns no results

--- a/production/src/dossier/dossier.css
+++ b/production/src/dossier/dossier.css
@@ -21,7 +21,8 @@
   margin-top: 10px;
 }
 
-#popup-wrapper .empty  {
+
+#popup-wrapper .dossier-window .empty  {
   position: fixed; 
   left: 0;
   top: 0;
