--- a/production/src/dossier/dossier.css
+++ b/production/src/dossier/dossier.css
@@ -22,9 +22,9 @@
 }
 
 #popup-wrapper .dossier-window .empty  {
-  position: fixed; 
+  position: relative;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 145px);
 }
