--- a/production/src/index.css
+++ b/production/src/index.css
@@ -172,9 +172,9 @@ button.floating-button[disabled]:hover {
 
 .popup-footer {
   border: 1px solid #E8EDF0;
-  position: fixed;
   height: 68px;
   bottom: 0;
   left: 0;
   right: 0;
+  min-width: 530px;
 }
