DE155226; Added scroll bar to right-side-panel

--- a/office-loader/public/style/index.css
+++ b/office-loader/public/style/index.css
@@ -19,6 +19,7 @@ body {
     text-align: center;
     top: 50%;
     transform: translate(-50%, -50%);
+    overflow-y: auto;
 }
 
 .cookie-check-container .title {
