US289844; fixed prepare data and prompted reports

--- a/production/src/navigation/navigation-tree.css
+++ b/production/src/navigation/navigation-tree.css
@@ -12,6 +12,10 @@
   min-width: 530px;
 }
 
+.navigation_tree__main_wrapper .popup-footer {
+  position: relative;
+}
+
 .navigation_tree__title_bar {
   margin: 15px;
   min-width: 500px;
