--- a/production/src/index.css
+++ b/production/src/index.css
@@ -172,6 +172,7 @@ button.floating-button[disabled]:hover {
 
 .popup-footer {
   border: 1px solid #E8EDF0;
+  position: fixed;
   height: 68px;
   bottom: 0;
   left: 0;
