US390343;Resolve sonarqube issues (#1414)
* US390343;Resolve sonarqube bugs

* fix unit test

--- a/production/src/file-history/file-history.scss
+++ b/production/src/file-history/file-history.scss
@@ -296,7 +296,7 @@ span {
 }
 
 .visualization-path-row {
-  font-family: HelveticaNeue;
+  font-family: 'Roboto', 'Noto Sans', 'Noto Sans JP', 'Noto Sans KR', 'Noto Sans SC', 'Noto Sans TC', 'Helvetica Neue', sans-serif;
   font-size: 10px;
   color: #444649;
   margin-bottom: 8px;
