DE182195 Fix bottom menu responsiveness (#1476)
* DE182195 Fix bottom menu responsiveness

* Remove unused const

* Remove min and max height

* Revert min and max height

* Remove height

--- a/production/src/index.css
+++ b/production/src/index.css
@@ -172,7 +172,7 @@ button.floating-button[disabled]:hover {
 
 .popup-footer {
   border: 1px solid #E8EDF0;
-  position: fixed;
+  position: relative;
   height: 68px;
   bottom: 0;
   left: 0;
