DE167086 Fix classes and bump react version (#1481)
* DE167086 Fix classes and bumo react version

* fix for prompted footer

--- a/production/src/index.css
+++ b/production/src/index.css
@@ -179,3 +179,11 @@ button.floating-button[disabled]:hover {
   right: 0;
   min-width: 530px;
 }
+
+.promptsContainer + .popup-footer {
+  position: fixed;
+}
+
+.attribute-selector-window .popup-footer {
+  min-width: 650px;
+}
