DE213742;Tooltip in Prepare Data view is displayed in the wrong position (#1520)

--- a/production/src/attribute-selector/attribute-selector.css
+++ b/production/src/attribute-selector/attribute-selector.css
@@ -1,3 +1,3 @@
-.attribute-forms .ant-tree li .ant-tree-node-content-wrapper .ant-tree-title .item-title {
+.attribute-forms .ant-tree .ant-tree-treenode-switcher-close .ant-tree-node-content-wrapper .ant-tree-title .item-title {
   width: auto;
 }
