--- a/production/src/popup/popup-buttons/popup-buttons.css
+++ b/production/src/popup/popup-buttons/popup-buttons.css
@@ -2,6 +2,7 @@
     padding: 19px 20px;
     text-align: right;
     background-color: #fff;
+    height: 30px;
 }
 
 .popup-buttons .mstr-rc-button,
@@ -63,8 +64,8 @@
   position: relative;
   top: 0;
   left: 0;
-  min-height: calc(100vh - 145px);
-  max-height: calc(100vh - 145px);
+  min-height: calc(100vh - 180px);
+  max-height: calc(100vh - 180px);
   min-width: 530px;
 }
 
