--- a/production/src/navigation/navigation-tree.css
+++ b/production/src/navigation/navigation-tree.css
@@ -10,6 +10,11 @@
 
 .navigation_tree__main_wrapper .object-table {
   min-width: 530px;
+  height: calc(100% - 120px);
+}
+
+.navigation_tree__main_wrapper .object-table .object-table-container {
+    background-color: white;
 }
 
 .navigation_tree__main_wrapper .popup-footer {
