--- a/production/src/popup/popup-buttons/popup-buttons.css
+++ b/production/src/popup/popup-buttons/popup-buttons.css
@@ -59,27 +59,38 @@
     max-width: 100%;
  }
 
-.dossier-iframe {
+.dossier-iframe,
+.library-iframe {
   position: relative;
   top: 0;
   left: 0;
-  min-height: calc(100vh - 145px);
   max-height: calc(100vh - 145px);
   min-width: 530px;
 }
 
+.dossier-iframe {
+    min-height: calc(100vh - 145px);
+}
+
+.library-iframe {
+    min-height: calc(100vh - 125px);
+}
+
  @media (max-width: 530px) {
-  .dossier-window .popup-buttons {
+  .dossier-window .popup-buttons,
+  .library-window .popup-buttons {
     margin-bottom: 15px;
   }
 
-  .dossier-window {
+  .dossier-window,
+  .library-window {
     height: 100vh;
     overflow-x: scroll;
     overflow-y: hidden;
   }
 
-  .dossier-iframe{
+  .dossier-iframe,
+  .library-iframe {
     min-height: calc(100vh - 160px);
     max-height: calc(100vh - 160px);
   }
