--- a/production/src/file-history/file-history.scss
+++ b/production/src/file-history/file-history.scss
@@ -177,6 +177,8 @@ li {
 
 .object-name {
   width: 100%;
+  font-family: 'Roboto', 'Noto Sans', 'Noto Sans JP', 'Noto Sans KR', 'Noto Sans SC', 'Noto Sans TC', 'Helvetica Neue', sans-serif;
+  text-overflow: ellipsis;
 }
 
 .object-title-row {
