--- a/production/src/right-side-panel/right-side-panel.scss
+++ b/production/src/right-side-panel/right-side-panel.scss
@@ -6,6 +6,13 @@
   .object-tile-container {
     overflow-y: hidden;
   }
+
+  .object-name {
+    width: 100%;
+    font-family: 'Roboto', 'Noto Sans', 'Noto Sans JP', 'Noto Sans KR', 'Noto Sans SC', 'Noto Sans TC', 'Helvetica Neue', sans-serif;
+    text-overflow: ellipsis;
+  }  
+
 }
 
 .import-data {
