--- a/production/src/right-side-panel/right-side-panel.scss
+++ b/production/src/right-side-panel/right-side-panel.scss
@@ -19,6 +19,10 @@
   height: 100%;
   overflow-y: auto;
   padding: 40px 40px 0;
+
+  .mstr-rc-tooltip-source {
+    display: block
+  }
 }
 
 .import-data::after {
