--- a/production/src/right-side-panel/right-side-panel.scss
+++ b/production/src/right-side-panel/right-side-panel.scss
@@ -30,3 +30,14 @@
   display: block;
   padding-bottom: 15px;
 }
+
+.block-side-panel-ui {
+  position: fixed;
+  width: 100%;
+  height: 1000px;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+  background-color: #ffffff;
+  z-index: 1000;
+}
