Updated CSS styles based on feedback.

--- a/production/src/right-side-panel/right-side-panel.scss
+++ b/production/src/right-side-panel/right-side-panel.scss
@@ -34,10 +34,10 @@
 .block-side-panel-ui {
   position: fixed;
   width: 100%;
-  height: 1000px;
+  height: 100%;
   top: 0;
   left: 0;
   opacity: 0.3;
   background-color: #ffffff;
-  z-index: 1000;
+  z-index: 1;
 }
