--- a/production/src/embedded/dossier/dossier.css
+++ b/production/src/embedded/dossier/dossier.css
@@ -21,10 +21,21 @@
   margin-top: 10px;
 }
 
+.dossier-window .title-bar {
+  min-width: 500px;
+  margin: 15px;
+}
+
+.dossier-window .title-bar>span {
+  font-size: 18px;
+  color: #333333;
+  font-weight: 500;
+}
+
 #popup-wrapper .dossier-window .empty  {
   position: fixed;
   left: 0;
-  top: 77px;
+  top: 0;
   width: 100%;
-  height: calc(100vh - 145px);
+  height: 100%;
 }
