--- a/production/src/prompts/prompts-window.scss
+++ b/production/src/prompts/prompts-window.scss
@@ -25,7 +25,7 @@
 #popup-wrapper .prompts-window .empty  {
   position: fixed;
   left: 0;
-  top: 0;
+  top: 57px;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 125px);
 }
