--- a/production/src/embedded/dossier/dossier.css
+++ b/production/src/embedded/dossier/dossier.css
@@ -24,9 +24,7 @@
 
 .dossier-window .title-bar {
   min-width: 500px;
-  margin: 15px;
-  margin-top: 20px;
-  margin-bottom: 10px;
+  margin: 20px 15px 10px 15px;
 }
 
 .dossier-window .title-bar>span {
