--- a/production/src/popup/mixins.scss
+++ b/production/src/popup/mixins.scss
@@ -3,5 +3,5 @@
   left: 0;
   top: 57px;
   width: 100%;
-  height: calc(100% - 125px);
+  height: calc(100% - 125px); /* 125px = 57px (top distance) + 68px (button row height) */
 }
