--- a/production/src/popup/overview/overview-window.scss
+++ b/production/src/popup/overview/overview-window.scss
@@ -1,4 +1,5 @@
 .data-overview-wrapper {
-    width: 100%;
-    height: 100vh;
+  width: calc(100% - 40px);
+  height: calc(100vh - 90px);
+  margin: 20px auto 90px;
 }
