--- a/production/src/home/settings-menu.scss
+++ b/production/src/home/settings-menu.scss
@@ -1,3 +1,5 @@
+@import '~@mstr/rc/es/assets/scss/msdl_universal.scss';
+
 @mixin bottom-line {
   border-bottom: solid 1px #e4e4e4;
 }
@@ -71,14 +73,14 @@ $text-color: #3F4042;
     margin: 8px 0;
 
     &-inactive {
-      color: rgba(0, 0, 0, 0.5);
+      color: $msdl-gray;
     }
   }
   .clear-data {
     margin: 8px 0;
 
     &-inactive {
-      color: rgba(0, 0, 0, 0.5);
+      color: $msdl-gray;
     }
   }
   .settings {
