--- a/production/src/prompts/prompts-window.scss
+++ b/production/src/prompts/prompts-window.scss
@@ -1,12 +1,12 @@
-@import '~@mstr/rc/es/assets/scss/msdl_universal.scss';
-@import '../popup/mixins.scss';
+@import "~@mstr/rc/es/assets/scss/msdl_universal.scss";
+@import "../popup/mixins.scss";
 
 .prompts-window {
   height: 100%;
   position: fixed;
   width: 100%;
   overflow: hidden;
-  min-width: 100%;    
+  min-width: 100%;
   overflow-x: auto;
 }
 
@@ -14,6 +14,6 @@
   border-top: 1px solid $msdl-divider-gray_SOLID;
 }
 
-#popup-wrapper .prompts-window .empty  {
-  @include popup-empty-component;
+#popup-wrapper .prompts-window .mstr-rc-3-spinner {
+  @include popup-loading-component;
 }
